kubernetes/apps/media/plex/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.clustrs.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
  annotations:
    gethomepage.dev/description: "Media server"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "plex"
    gethomepage.dev/name: "Plex"
spec:
  hostnames:
    - "plex.${DOMAIN_CLUSTER}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: plex
          port: 32400
      filters:
        - requestHeaderModifier:
            set:
              - name: X-Plex-Http-Pipeline
                value: infinite
          type: RequestHeaderModifier
    - backendRefs:
        - name: plex
          port: 32400
      filters:
        - requestHeaderModifier:
            remove:
              - Range
            set:
              - name: X-Plex-Http-Pipeline
                value: infinite
          type: RequestHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /library/streams
---
# yaml-language-server: $schema=https://schemas.clustrs.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex-public
spec:
  hostnames:
    - "plex.${DOMAIN_APP}"
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: plex
          port: 32400
      filters:
        - requestHeaderModifier:
            set:
              - name: X-Forwarded-For
                value: 192.0.2.1
              - name: X-Plex-Http-Pipeline
                value: infinite
          type: RequestHeaderModifier
    - backendRefs:
        - name: plex
          port: 32400
      filters:
        - requestHeaderModifier:
            remove:
              - Range
            set:
              - name: X-Forwarded-For
                value: 192.0.2.1
              - name: X-Plex-Http-Pipeline
                value: infinite
          type: RequestHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /library/streams
